ブランチ上の作業を確認

--- a/site/test.html
+++ b/site/test.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-  ヤホーイ
+  やほーい
+  ブランチ上作業の動向を見てるよ〜
   </body>
 </html>
